# prediction-market

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.local/: keypair.json
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/command/: claim.rs  create.rs  end.rs  mod.rs  place_bet.rs
interface/: Cargo.toml
interface/src/: lib.rs
onchain/: Cargo.toml
onchain/src/: lib.rs  token_account.rs
onchain/tests/: mod.rs
program/: Cargo.toml
program/runbooks/deployment/: main.tx
program/src/: ata_accessor.rs  constants.rs  lib.rs
server/: .gitignore  Cargo.toml
server/src/: main.rs
src/: ata_accessor.rs  constants.rs  lib.rs  utils.rs
tests/: mod.rs
types/: Cargo.toml
types/src/: lib.rs
