[workspace]
members = ["program"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
solana-keypair = "2.2.0"
solana-pubkey = "3.0"
solana-account = "3.0"
solana-transaction = "3.0"
solana-instruction = "3.0"
