[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] } # Cliente HTTP
solana-sdk = "3.0.0"
dialoguer = "0.11"
console = "0.15"
comfy-table = "7.1"
indicatif = "0.17"
anyhow = "1.0"
dirs = "5.0"
serde_json = "1.0"
solana-client = "3.1.1"
