[package]
name = "solana-gamble-onchain"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-token-2022 = "0.1.0"
pinocchio-associated-token-account = "0.2.0"

[dev-dependencies]
litesvm = "0.8.2"
solana-keypair = "3.0"
solana-pubkey = "3.0"
solana-account = "3.0"
solana-transaction = "3.0"
solana-instruction = "3.0"
