[package]
name = "solana-gamble-program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { workspace = true }
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
pinocchio-associated-token-account = "0.2.0"
pinocchio-token-2022 = "0.1.0"

[dev-dependencies]
mollusk-svm = "0.5.1"
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-account = { workspace = true }
solana-transaction = { workspace = true }
solana-instruction = { workspace = true }
