[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
firestore = "0.43"
gcloud-sdk = "0.24"
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rustls = { version = "0.23", features = ["ring"] }
